--- a/content/pages/index.njk
+++ b/content/pages/index.njk
@@ -4,7 +4,7 @@ eleventyNavigation:
   key: Home
   order: 1
 numberOfLatestPostsToShow: 3
-permalink: /index.html
+permalink: index.html
 ---
 {% set postsCount = collections.posts | length %}
 {% set latestPostsCount = postsCount | min(numberOfLatestPostsToShow) %}
