--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -24,7 +24,7 @@
 		{#- Add an arbitrary string to the bundle #}
 		{%- css %}* { box-sizing: border-box; }{% endcss %}
 		{#- Add the contents of a file to the bundle #}
-		{%- css %}{% include "assets/css/index.css" %}{% endcss %}
+		{%- css %}{% include "/assets/css/index.css" %}{% endcss %}
 		{#- Or add from node_modules #}
     <link rel="stylesheet" href="{{ '/css/prism-base16-monokai.dark.css' | url }}">
     	{#- Render the CSS bundle using Inlined CSS (for the fastest site performance in production) #}
