--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -30,7 +30,7 @@
     	{#- Render the CSS bundle using Inlined CSS (for the fastest site performance in production) #}
 		<!--style>{% getBundle "css" %}</style-->
 		{#- Renders the CSS bundle using a separate file, if you can't set CSP directive style-src: 'unsafe-inline' #}
-		{#- <link rel="stylesheet" href="{% getBundleFileUrl "css" %}"> #}
+		{%- <link rel="stylesheet" href="{% getBundleFileUrl "css" %}"> %}
 	</head>
   <body>
     <header>
@@ -62,3 +62,5 @@
     <!-- Current page: {{ page.url | url }} -->
   </body>
 </html>
+
+
