--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -26,7 +26,7 @@
 		{#- Add the contents of a file to the bundle #}
 		 <link rel="stylesheet" href="{{ './assets/css/index.css' | url }}" rel="stylesheet" type="text/css" />
 		{#- Or add from node_modules #}
-    		<link rel="stylesheet" href="{{ '/assets/css/prism-base16-monokai.dark.css' | url }}">
+    		<link rel="stylesheet" href="{{ './assets/css/prism-base16-monokai.dark.css' | url }}">
     	{#- Render the CSS bundle using Inlined CSS (for the fastest site performance in production) #}
 		<!--style>{% getBundle "css" %}</style-->
 		{#- Renders the CSS bundle using a separate file, if you can't set CSP directive style-src: 'unsafe-inline' #}
