--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -28,7 +28,7 @@
 		{#- Or add from node_modules #}
     		<link rel="stylesheet" href="{{ './assets/css/prism-base16-monokai.dark.css' | url }}">
     	{#- Render the CSS bundle using Inlined CSS (for the fastest site performance in production) #}
-		<!--style>{% getBundle "css" %}</style-->
+		<style>{% getBundle "css" %}</style>
 		{#- Renders the CSS bundle using a separate file, if you can't set CSP directive style-src: 'unsafe-inline' #}
 	<link rel="stylesheet" href="{% getBundleFileUrl "css" %}">
 	</head>
