--- a/src/content/pages/archive.njk
+++ b/src/content/pages/archive.njk
@@ -1,6 +1,6 @@
 ---
 layout: layouts/home.njk
-permalink: archives/index.html
+permalink: archive/index.html
 eleventyNavigation:
   key: Archive
   order: 2
